src/objects/CFM_Survey_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting manages various parameters for the CFM Survey System, including email settings and Qualtrics integration settings</description>
    <fields>
        <fullName>Default_Signatory_Name__c</fullName>
        <label>Default Signatory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Management_Job__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Management Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedited_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, the escalation process will fire after 10 minutes instead of the length of time specified on the survey case hierarchy object. To be used for testing only.</inlineHelpText>
        <label>Expedited Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Endpoint__c</fullName>
        <label>Qualtrics Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_From_Email__c</fullName>
        <label>Qualtrics From Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_From_Name__c</fullName>
        <label>Qualtrics From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Import_Panel_Version__c</fullName>
        <label>Qualtrics Import Panel Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Library_ID__c</fullName>
        <label>Qualtrics Library ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Message_ID__c</fullName>
        <label>Qualtrics Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Message_Library_ID__c</fullName>
        <label>Qualtrics Message Library ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Panel_Library_ID__c</fullName>
        <label>Qualtrics Panel Library ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Selected_API__c</fullName>
        <label>Qualtrics Selected API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Send_Survey_Version__c</fullName>
        <label>Qualtrics Send Survey Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Sent_From_Email__c</fullName>
        <label>Qualtrics Sent From Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Subject__c</fullName>
        <label>Qualtrics Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Survey_ID__c</fullName>
        <label>Qualtrics Survey ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Token__c</fullName>
        <label>Qualtrics Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_URL__c</fullName>
        <label>Qualtrics URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_User__c</fullName>
        <label>Qualtrics User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CFM Survey Settings</label>
</CustomObject>